[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "tldhuber"}

[project]
name = "tldhuber"
version = "0.0.1"
authors = [
  { name = "Ed Seryozhenkov", email = "edouas@uw.edu" },
  { name = "Mark" },
  { name = 'Amit' },
  { name = 'Jake' },
]
description = "An Andrew Huberman Chat Engine"
readme = "README.md"
requires-python = ">=3.9, <4.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "python >=3.9, <4.0",
  "jupyter",
  "ipykernel",
  "pandas",
  "feedparser==6",
  "google-api-python-client==2.118.0",
  "google-auth-httplib2==0.2.0",
  "google-auth-oauthlib==1.2.0",
  "llama-index==0.10.13",
  "nest-asyncio==1.6",
  "openai==1.12.0",
  "pytest==8",
  "streamlit==1.31",
  "youtube-transcript-api==0.6",
]

[project.urls]
Homepage = "https://github.com/apeled/TLDhubeR/tree/main"
Issues = "https://github.com/apeled/TLDhubeR/issues"
